--- a/web/index.html
+++ b/web/index.html
@@ -1,46 +1,161 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Moltbook Local</title>
-<style>
-body { font-family: sans-serif; background:#111; color:#eee; }
-#chat { height:80vh; overflow-y:auto; }
-input { width:100%; font-size:16px; padding:10px; }
-.bot { color:#7cf; }
-.user { color:#fc7; }
-</style>
+  <meta charset="UTF-8" />
+  <title>Moltbook Local</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #111;
+      color: #eee;
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+    }
+
+    #chat {
+      flex: 1;
+      overflow-y: auto;
+      padding: 12px;
+    }
+
+    .bot1 { color: #7dd3fc; }
+    .bot2 { color: #86efac; }
+    .bot3 { color: #fca5a5; }
+    .user { color: #e5e7eb; }
+
+    #inputBar {
+      display: flex;
+      padding: 10px;
+      background: #222;
+      border-top: 1px solid #333;
+    }
+
+    #input {
+      flex: 1;
+      font-size: 16px;
+      padding: 8px;
+      border-radius: 4px;
+      border: none;
+      outline: none;
+    }
+  </style>
 </head>
+
 <body>
 
-<h2>Moltbook Local</h2>
-<div id="chat"></div>
-<input id="input" placeholder="Type and hit Enter..." />
+  <div id="chat"></div>
+
+  <div id="inputBar">
+    <input
+      id="input"
+      placeholder="Type a message and press Enter…"
+      autocomplete="off"
+    />
+  </div>
+
+  <!-- persistent audio element -->
+  <audio id="botAudio"></audio>
 
 <script>
+const chat = document.getElementById("chat");
+const input = document.getElementById("input");
+
+const audioEl = document.getElementById("botAudio");
+audioEl.volume = 1.0;
+
+let audioUnlocked = false;
+let lastPlayedAudio = null;
+
+console.log("🟡 Script loaded");
+
+// 🔓 USER GESTURE UNLOCK
+document.addEventListener("click", () => {
+  audioUnlocked = true;
+  console.log("🔓 Audio unlocked by user click");
+}, { once: true });
+
 async function refresh() {
-  const r = await fetch("/api/messages");
-  const data = await r.json();
-  const chat = document.getElementById("chat");
-  chat.innerHTML = data.map(m =>
-    `<div class="${m.bot}"><b>${m.bot}:</b> ${m.content}</div>`
-  ).join("");
+  const res = await fetch("/api/messages");
+  const messages = await res.json();
+
+  console.log("🔄 Refresh, messages:", messages.length);
+
+  chat.innerHTML = messages.map(m => `
+    <div class="${m.bot}">
+      <b>${m.bot}:</b> ${m.content}
+      ${m.audio ? `<small>(${m.audio})</small>` : ""}
+    </div>
+  `).join("");
+
   chat.scrollTop = chat.scrollHeight;
+
+  const last = messages[messages.length - 1];
+
+  if (!last) {
+    console.log("⚠️ No last message");
+    return;
+  }
+
+  if (!last.audio) {
+    console.log("⚠️ Last message has no audio");
+    return;
+  }
+
+  if (!audioUnlocked) {
+    console.log("🚫 Audio locked (no user click yet)");
+    return;
+  }
+
+  if (last.audio === lastPlayedAudio) {
+    console.log("🔁 Audio already played:", last.audio);
+    return;
+  }
+
+  console.log("🎯 Attempting to play:", last.audio);
+  lastPlayedAudio = last.audio;
+  playAudio(last.audio);
 }
 
-document.getElementById("input").addEventListener("keydown", async e => {
-  if (e.key === "Enter" && e.target.value.trim()) {
+function playAudio(filename) {
+  const url = `/audio/${filename}?t=${Date.now()}`;
+  console.log("🔊 Loading audio URL:", url);
+
+  audioEl.src = url;
+  audioEl.load();
+
+  const p = audioEl.play();
+
+  if (p !== undefined) {
+    p.then(() => {
+      console.log("✅ Audio playing:", filename);
+    }).catch(err => {
+      console.error("❌ Audio play failed:", err);
+    });
+  } else {
+    console.warn("⚠️ audio.play() returned undefined");
+  }
+}
+
+input.addEventListener("keydown", async e => {
+  if (e.key === "Enter" && input.value.trim()) {
+    console.log("📨 User message:", input.value);
     await fetch("/api/user-message", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({ content: e.target.value })
+      body: JSON.stringify({ content: input.value })
     });
-    e.target.value = "";
+    input.value = "";
   }
 });
 
 setInterval(refresh, 1000);
+refresh();
 </script>
 
 </body>
 </html>
+
